# vk_mesh_shader

./: .gitmodules  CMakeLists.txt  README.md
gpu_subdivision/: CMakeLists.txt  main.cpp
gpu_subdivision/shader/: subdivision.frag  subdivision.mesh
hello_mesh_shader/: CMakeLists.txt  main.cpp
hello_mesh_shader/shader/: meshshader.mesh
mesh_inline_rt/: CMakeLists.txt  main.cpp
mesh_inline_rt/shader/: mesh_inline_rt.frag
mesh_ray_query/: CMakeLists.txt  main.cpp
mesh_ray_query/shader/: mesh_ray_query.frag  mesh_ray_query.mesh
shader/: meshshader.frag  meshshader.mesh  meshshader.task
source/: main.cpp
